--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.469.0",
     "next": "14.2.16",
