--- a/package.json
+++ b/package.json
@@ -10,26 +10,37 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-browserify": "^3.12.1",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
     "gray-matter": "^4.0.3",
+    "https-browserify": "^1.0.0",
     "lucide-react": "^0.469.0",
-    "next": "14.2.16",
+    "next": "^15.1.3",
     "next-auth": "^4.24.11",
+    "os-browserify": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "react-scroll": "^1.9.0",
     "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
