--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@markdoc/markdoc": "^0.4.0",
     "@prisma/client": "^6.1.0",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
