feat: 認証機能とデータベース構造の大幅な改善 - 認証機能の強化（Google/メール認証、ロールベース認証） - データベース関連（PostgreSQL移行、スキーマ最適化） - 機能追加（プロフィール、ブックマーク、Q&A）

--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "upload-article": "ts-node scripts/upload-article.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@markdoc/markdoc": "^0.4.0",
     "@prisma/client": "^6.1.0",
+    "@types/node-fetch": "^2.6.12",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-browserify": "^3.12.1",
+    "events": "^3.3.0",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
     "gray-matter": "^4.0.3",
@@ -23,9 +27,11 @@
     "lucide-react": "^0.469.0",
     "next": "^15.1.3",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "os-browserify": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "react-scroll": "^1.9.0",
     "remark": "^15.0.1",
