refactor: APIエンドポイントの改善 - 認証システム更新、エラーハンドリング統一、レスポンス形式統一、バリデーション追加、ログ機能実装

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-# Database
+# アプリケーション設定
+NODE_ENV=development # development または production
+LOG_LEVEL=debug # development では debug, production では info を推奨
+
+# データベース設定
 DATABASE_URL="postgresql://[username]:[password]@[host]:[port]/[database]"
 
 # Firebase
