--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@markdoc/markdoc": "^0.4.0",
     "@prisma/client": "^6.1.0",
     "@types/node-fetch": "^2.6.12",
+    "@upstash/redis": "^1.34.3",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +30,8 @@
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "os-browserify": "^0.3.0",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
