--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@headlessui/react": "^2.2.0",
     "@markdoc/markdoc": "^0.4.0",
     "@prisma/client": "^6.1.0",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@types/node-fetch": "^2.6.12",
+    "@types/papaparse": "^5.3.15",
     "@upstash/redis": "^1.34.3",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-browserify": "^3.12.1",
+    "date-fns": "^4.1.0",
     "events": "^3.3.0",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
@@ -30,6 +33,7 @@
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "os-browserify": "^0.3.0",
+    "papaparse": "^5.5.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "react": "^18",
