--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "medical-wiki",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -22,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-browserify": "^3.12.1",
+    "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
     "events": "^3.3.0",
     "firebase": "^11.1.0",
@@ -29,15 +31,15 @@
     "gray-matter": "^4.0.3",
     "https-browserify": "^1.0.0",
     "lucide-react": "^0.469.0",
-    "next": "^15.1.3",
+    "next": "^15.1.5",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "os-browserify": "^0.3.0",
     "papaparse": "^5.5.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "react-scroll": "^1.9.0",
@@ -64,6 +66,7 @@
     "postcss": "^8",
     "prisma": "^6.1.0",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
