--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "papaparse": "^5.5.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "react-scroll": "^1.9.0",
@@ -61,8 +61,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-scroll": "^1.8.10",
+    "@types/glob": "^8.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
+    "glob": "^10.3.10",
     "postcss": "^8",
     "prisma": "^6.1.0",
     "tailwindcss": "^3.4.1",
